> Fixed: Remote control doesn't show correct initial position
> Fixed: When switching to manual from a premade motion, don't jump to old last recorded position.

# 1.20.23 (27797) 01-30-2009
> Changed to Motion2D model
> Put black outlines on the vel and acc vectors to help them stand out
> Reduce speed of preset motions

# 1.20.22 (27694) 01-26-2009
# 1.20.21 (27692) 01-26-2009
> Added developer controls for motion behavior
> Added cursor to playback speed slider

# 1.20.20 (27683) 01-26-2009
> Use analytic values for velocity and acceleration in circular motion
> Use analytic values for velocity and acceleration in ellipse

# 1.20.19 (27680) 01-26-2009
> Changed default recording time from 30 to 15 seconds
> Removed the "Stop/Go" button below the remote control
> Added playback speed slider
> Compute velocity and acceleration as averages over 6 data points with slope of linear fit (as in rotation sim)
> Start the ladybug somewhere other than (0,0) so that the Remote Control position vector will be visible on startup
> Added return ladybug button
> Bigger circle in middle of remote control. Clicking anywhere on this circle sets vel or acc exactly to zero.
> Sim starts paused; starts recording when bug is moved
> Show acceleration and velocity even before 20 history points have been recorded
> The sim should be running on startup but not recording until the user moves the bug, uses the remote control or chooses a preset motion.
> Renamed "clear trace" to "clear" and made it clear history instead of just the graphical trace.
> The Ladybug should be smaller - more similar to size of bugs in Rotation.
> Fixed: - Vectors in remote are not sized to the same relative proportions as they are on the bug. For example, accel vector is very small on bug, very large in remote.
> Set circular motion speed so that dots match up exactly in trace
> Set elliptical motion speed so that dots match up exactly in trace